[MYB-1583] Namespacing fixes, and others from Christian's code review

--- a/devwidgets/quicklinks/css/quicklinks.css
+++ b/devwidgets/quicklinks/css/quicklinks.css
@@ -30,12 +30,20 @@
     position: relative;
 }
 
-/* Accordion */
-.quicklinks_widget .link_list #accordion {
-    padding: 0;
+.quicklinks_widget .icon_button {
+    display: block;
+    float: right;
+    background-image: url("/devwidgets/quicklinks/images/edit-delete-icon-sprite.png");
+    background-color: #EFEFEF;
+    border: 1px solid #CCC;
+    border-radius: 3px;
+    height: 16px;
+    width: 16px;
 }
 
-.quicklinks_widget .link_list #accordion .accordion_pane {
+/* Accordion */
+.quicklinks_widget .link_list #quicklinks_accordion {
+    padding: 0;
 }
 
 .quicklinks_widget .link_list .accordion_content {
@@ -62,7 +70,6 @@
     font-size: 0.9em;
 }
 
-
 .quicklinks_widget .accordion_open .section_label {
     background-color: #D5DBDF;
     color: #222;
@@ -71,7 +78,6 @@
 .quicklinks_widget .link_list li {
     display: block;
     position: relative;
-    list-style: none;
     margin-top: 1%;
     margin-left: 1%;
     -moz-border-radius: 3px;
@@ -97,7 +103,6 @@
 .quicklinks_widget .link_list a {
     display: block;
     padding: 5px 24px 5px 5px;
-    outline: none;
 }
 
 .quicklinks_widget .link_list a:hover {
@@ -105,23 +110,12 @@
     text-decoration: none;
 }
 
-.quicklinks_widget .icon_button {
-    display: block;
-    float: right;
-    background-image: url("/devwidgets/quicklinks/images/edit-delete-icon-sprite.png");
-    background-color: #EFEFEF;
-    border: 1px solid #CCC;
-    border-radius: 3px;
-    height: 16px;
-    width: 16px;
-}
-
 .quicklinks_widget .link_list li .edit_buttons {
     display: none;
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 100;
+    z-index: 1;
     padding: 3px;
     background-color: #EFEFEF;
     border-radius: 3px;
@@ -133,7 +127,7 @@
 
 .quicklinks_widget .icon_button:hover {
     border: 1px solid #2683BC;
-    background-color: white;
+    background-color: #FFFFFF;
 }
 
 .quicklinks_widget .delete_icon {
@@ -147,44 +141,45 @@
 
 /* Edit mode */
 
-.quicklinks_widget .link_list #accordion a {
+.quicklinks_widget .link_list #quicklinks_accordion a {
     text-decoration: none;
 }
 
-.quicklinks_widget .link_list #accordion a:hover {
+.quicklinks_widget .link_list #quicklinks_accordion a:hover {
     text-decoration: underline;
 }
 
 /* Add/Edit Link Panel */
 
-.quicklinks_widget .addedit_link_panel {
+.quicklinks_widget .quicklinks_addedit_link_panel {
     position: absolute;
     top: 2.4em;
     left: 4%;
     width: 92%;
-    display: none;    
-    background-color: white;
-    border: 1px solid darkGray;
+    display: none;
+    z-index: 2;
+    background-color: #FFFFFF;
+    border: 1px solid #A9A9A9;
     -moz-border-radius: 5px;
     border-radius: 5px;
-    box-shadow: 0 0 10px black;
-    -moz-box-shadow: 0 0 10px black;
-    -webkit-box-shadow: 0 0 10px black;
+    box-shadow: 0 0 10px #000000;
+    -moz-box-shadow: 0 0 10px #000000;
+    -webkit-box-shadow: 0 0 10px #000000;
     color: #424242;
 }
 
-.quicklinks_widget .addedit_link_panel label {
+.quicklinks_widget .quicklinks_addedit_link_panel label {
     display: block;
     font-size: 0.9em;
     padding: 0.6em 0 0.3em;
 }
 
-.quicklinks_widget .addedit_link_panel .link-form input {
+.quicklinks_widget .quicklinks_addedit_link_panel .link-form input {
     width: 98%;
     padding: 0.2em;
 }
 
-.quicklinks_widget .addedit_link_panel .button-list {
+.quicklinks_widget .quicklinks_addedit_link_panel .button-list {
     float: right;
     padding: 9px 10px;
 }
@@ -195,22 +190,22 @@
 
 .quicklinks_widget label.error {
     text-align: center;
+    color:#CC0000;
 }
 
-.quicklinks_widget .addedit_link_panel h2.s3d-addlink-header {
+.quicklinks_widget .quicklinks_addedit_link_panel h2.s3d-addlink-header {
     border-bottom: 1px dotted #D4D4D4;
     font-size: 1.1em;
     padding-bottom: 6px;
     margin: 9px 10px 2px;
 }
 
-.quicklinks_widget .addedit_link_panel .link-form-element {
+.quicklinks_widget .quicklinks_addedit_link_panel .link-form-element {
     padding: 0 10px;
 }
 
 .quicklinks_widget .s3d-button.disabled {
 	-moz-opacity: 0.4;
-	filter:alpha(opacity=40);
 	opacity: 0.4;
 }
 
